# ViaRAG

./: LICENSE  README.md  client.py  pipeline.py  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml
cli/: main.py
core/: document.py  ingestion.py
embed/: remote_embedder.py
retrieve/: remote_retriever.py
viaRAG/: ViaRAG_demo.ipynb  client.py
viarag/: config.py
viarag/client/: client.py
viarag/core/: http.py  models.py
viarag_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
