[project]
name = "viarag"
version = "0.1.2"
description = "Minimal Python SDK for interacting with the ViaRAG API"
authors = [{name = "Eric Meltser", email = "info@viaveri.co"}]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU General Public"}
dependencies = ["requests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
